[project]
name = "idtxl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ecos>=2.0.14",
    "h5py>=3.15.1",
    "jpype1>=1.6.0",
    "matplotlib>=3.10.7",
    "mpmath>=1.3.0",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "prettytable>=3.16.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "statsmodels>=0.14.5",
]
